force-app/main/default/objects/CommonObject__c/CommonObject__c.object-meta.xml
<CustomObject>
    <label>Enquiry</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>