force-app/main/default/objects/CommonObject__c/fields/Enquiry_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Contact_Number__c</fullName>
    <label>Enquiry Contact Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>