force-app/main/default/objects/CommonObject__c/fields/Enquiry_Name__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Name__c</fullName>
    <label>Enquiry Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>